# cs-curriculum

ab-testing/: README.md  pyproject.toml
ab-testing/notebooks/: data.csv
ab-testing/notebooks/.ipynb_checkpoints/: AB Testing-checkpoint.ipynb
backprop/: pyproject.toml
backprop/notebooks/.ipynb_checkpoints/: micrograd_from_scratch-checkpoint.ipynb
