[tool.poetry]
name = "backprop"
version = "0.1.0"
description = ""
authors = ["Andreas Klintberg <andreas.klintberg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.1.2"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
graphviz = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
